# rusty_dmg

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.config/: nextest.toml
dmg/: Cargo.toml
dmg/src/: joypad.rs  lib.rs  serial.rs  timer.rs
dmg/src/cpu/: core.rs  decode.rs  fetch.rs  instructions.rs  mod.rs  register.rs
dmg/src/cpu/test/: mod.rs  test_0x.rs  test_1x.rs  test_2x.rs  test_3x.rs  test_4x.rs  test_5x.rs  test_6x.rs  test_7x.rs  test_8x.rs  test_9x.rs  test_ax.rs  test_bx.rs  test_cb.rs
dmg/src/memory/: boot_rom.rs  dma.rs  interrupt_controller.rs  io_registers.rs  mmu.rs  mod.rs
dmg/src/ppu/: color32.rs  mod.rs  ppu.rs
dmg/src/timer/: mod.rs
dmg/tests/: mooneye_tests.rs
dmg/tests/mooneye-test-suite/: version.txt
frontend/: Cargo.toml
frontend/src/: app.rs  main.rs
mbc/: Cargo.toml
mbc/src/: lib.rs  licensee_codes.rs  mbc.rs  mbc1.rs  mbc3.rs  mbc5.rs  no_mbc.rs
